--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
 <h2 th:text="#{app.title}">App Title</h2>
 <p><a href="/signup">Add a new user</a></p>
 <p><a href="/add_patient_default">Add Patient Here</a> </p>
+<p><a href="/add_manyUsers">Add many Users</a> </p>
 
 <table>
     <thead>
