--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
 <p><a href="/signup">Add a new user</a></p>
 <p><a href="/add_patient_default">Add Patient Here</a> </p>
 <p><a href="/add_manyUsers">Add many Users</a> </p>
+<p><a href="/import_default">Import from Excel</a> </p>
 
 <table>
     <thead>
