--- a/src/main/resources/templates/add_patient.html
+++ b/src/main/resources/templates/add_patient.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<form action="#" th:action="@{/add_patient}" th:object="${patient}" method="post">
+<form action="/add_patient"  th:object="${patient}" method="post">
     <div class="box">
         <h3>Quick Add</h3>
         <div class="columns three">
