--- a/src/main/resources/templates/addusers.html
+++ b/src/main/resources/templates/addusers.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 
-<form action="#" th:action="@{/adduser}" th:object="${user}" method="post">
+<form action="#" th:action="@{/adduser}" th:object="${userRequest}" method="post">
     <label for="name">Name</label>
-    <input type="text" th:field="*{name}" id="name" placeholder="Name">
+    <input type="text" th:field="*{user.name}" id="name" placeholder="Name">
 <!--    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>-->
     <label for="email">Email</label>
-    <input type="text" th:field="*{email}" id="email" placeholder="Email">
+    <input type="text" th:field="*{user.email}" id="email" placeholder="Email">
 <!--    <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>-->
     <input type="submit" value="Add User">
 </form>
