--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,8 @@
 <p><a href="/add_manyUsers">Add many Users</a> </p>
 <p><a href="/import_default">Import from Excel</a> </p>
 
+<p><a href="/guests">Import from Excel</a> </p>
+
 <table>
     <thead>
     <tr>
